# PassDepot

./: .gitignore  CMakeLists.txt  FuturePlans.md  PassDepot.md  README.md  depot.db  imgui.ini  vcpkg.json  xmake.lua
CMake/: SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake  Vcpkg.cmake
Include/: PDDatabase.h  PDGUI.h  PDSecurity.h  PDWindow.h  PassDepot.h
Source/: PDDatabase.cpp  PDGUI.cpp  PDSecurity.cpp  PDWindow.cpp  PassDepot.cpp  main.cpp
